--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7",
     "vue-chartjs": "3.5.1",
+    "vue-star-rating": "1.7.0",
     "vue-sweetalert2": "4.3.1"
   },
   "devDependencies": {
